--- a/demo/index.html
+++ b/demo/index.html
@@ -4,76 +4,29 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
 
-    <title>exmg-markdown-editor demo</title>
+    <title>exmg-markdown-editor demos</title>
 
     <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
 
     <link rel="import" href="../../iron-demo-helpers/demo-pages-shared-styles.html">
     <link rel="import" href="../../iron-demo-helpers/demo-snippet.html">
-    <link rel="import" href="../exmg-markdown-editor.html">
 
     <custom-style>
       <style is="custom-style" include="demo-pages-shared-styles">
-        .centered {
-          max-width: 1000px;
-        }
       </style>
     </custom-style>
   </head>
   <body>
-    <div class="vertical-section-container centered">
-      <h3>Basic exmg-markdown-editor demo</h3>
-      <demo-snippet>
-        <template>
-          <exmg-markdown-editor auto-focus split-view>
-            <script type="text/markdown">
-              # Headers
-               
-              # H1
-              ## H2
-              ### H3
-              #### H4
-              ##### H5
-              ###### H6
-
-              # Text
-              Lorem **ipsum** dolor sit amet, ~~consectetur adipiscing~~ elit, sed do *eiusmod* tempor incididunt 
-              ut labore et dolore magna aliqua. 
-
-              # Table
-              | User Name | Email |
-              | -------- | -------- |
-              | Pete     | Pete@example.com     |
-
-              # Quote
-              > Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-              
-              # Lists
-
-              ## Unordered
-              * List option 1
-              * List option 2
-
-              ## Ordered
-              1. List option 1
-              2. List option 2
-
-              # Images
-              ![Yes](https://www.polymer-project.org/images/logos/p-logo.png)
-            </script>
-          </exmg-markdown-editor>
-        </template>
-      </demo-snippet>
-      <demo-snippet>
-        <template>
-          <exmg-markdown-editor line-numbers toolbar-buttons='["strong","italic","quote"]'>
-            <script type="text/markdown">
-              # Text
-              Lorem **ipsum** dolor sit amet, ~~consectetur adipiscing~~ elit, sed do *eiusmod* tempor incididunt ut labore et dolore magna aliqua.   
-            </script>
-          </exmg-markdown-editor>
-        </template>
-      </demo-snippet>
+    <div class="horizontal-section-container">
+      <div>
+        <h4>WYSIWYG Markdown Editor</h4>
+        <ul class="horizontal-section">
+          <li><a href="init.html" target="_blank">Setup editor markdown</a></li>
+          <li><a href="style.html" target="_blank">Fullscreen and Restyled</a></li>
+          <li><a href="toolbar.html" target="_blank">Toolbar</a></li>
+          <li><a href="styling.html" target="_blank">Css styled preview</a></li>
+        </ul>
+      </div>
     </div>
   </body>
 </html>
