--- a/exmg-markdown-editor-import.html
+++ b/exmg-markdown-editor-import.html
@@ -1,8 +1,8 @@
-<script src="bower_components/codemirror/lib/codemirror.js"></script>
-<script src="bower_components/codemirror/mode/markdown/markdown.js"></script>
-<script src="bower_components/codemirror/addon/edit/continuelist.js"></script>
-<script src="bower_components/codemirror/addon/mode/overlay.js"></script>
-<script src="bower_components/codemirror/addon/display/fullscreen.js"></script>
-<script src="bower_components/codemirror/addon/display/placeholder.js"></script>
-<script src="bower_components/codemirror/mode/gfm/gfm.js"></script>
-<script src="bower_components/codemirror/mode/xml/xml.js"></script>
+<script src="../codemirror/lib/codemirror.js"></script>
+<script src="../codemirror/mode/markdown/markdown.js"></script>
+<script src="../codemirror/addon/edit/continuelist.js"></script>
+<script src="../codemirror/addon/mode/overlay.js"></script>
+<script src="../codemirror/addon/display/fullscreen.js"></script>
+<script src="../codemirror/addon/display/placeholder.js"></script>
+<script src="../codemirror/mode/gfm/gfm.js"></script>
+<script src="../codemirror/mode/xml/xml.js"></script>
