--- a/exmg-markdown-editor.html
+++ b/exmg-markdown-editor.html
@@ -6,7 +6,7 @@
 <link rel="import" href="exmg-markdown-editor-import.html">
 
 <dom-module id="exmg-markdown-editor">
-  <link rel="import" type="css" href="bower_components/codemirror/lib/codemirror.css">
+  <link rel="import" type="css" href="../codemirror/lib/codemirror.css">
   <template>
     <style>
       :host {
