Fixed issue with setting markdown from outside element after initialisation

--- a/exmg-markdown-editor.html
+++ b/exmg-markdown-editor.html
@@ -415,6 +415,9 @@
       }
 
       _markdownChanged(markdown) {
+        if (this.codeMirror.getValue() !== markdown) {
+          this.codeMirror.setValue(markdown);
+        } 
         if (this.markdownElement) {
           this.markdownElement.markdown = markdown;
         }
