Added more styling options

--- a/demo/style.html
+++ b/demo/style.html
@@ -28,8 +28,8 @@
           --exmg-markdown-editor-toolbar-color-disabled: #494949;
           --exmg-markdown-editor-toolbar-button-background-hover: #666;
           --exmg-markdown-editor-toolbar-seperator-color: #b9b9b9;
-          --exmg-markdown-editor-preview-background: rgb(243, 243, 243);
           --exmg-markdown-editor-background: #e4e4e4;
+          --exmg-markdown-editor-code-hover: #ebecf0;
           --exmg-markdown-editor-code: {
             font-family: Lato, "Helvetica Neue", Helvetica, sans-serif;
           }
