--- a/demo/styling.html
+++ b/demo/styling.html
@@ -18,6 +18,20 @@
 
     <custom-style>
       <style is="custom-style" include="demo-pages-shared-styles">
+
+         html {
+          --exmg-markdown-editor-border: #dfe1e6;
+          --exmg-markdown-editor-toolbar-background: #f4f5f7;
+          --exmg-markdown-editor-toolbar-button-background-hover: #ebecf0;
+          --exmg-markdown-editor-toolbar-color: #505f79;
+          --exmg-markdown-editor-toolbar:{
+            padding: 6px 10px;
+          };
+          --exmg-markdown-editor-toolbar-button-icon: {
+            width: 18px;
+            height: 18px;
+          }
+        }
         .centered {
           max-width: 1000px;
         }
