--- a/exmg-markdown-editor.html
+++ b/exmg-markdown-editor.html
@@ -63,7 +63,7 @@
       }
 
       .CodeMirror {
-        height: 100%;
+        height: 100% !important;
         min-height: 300px;
         font: inherit;
         z-index: 1;
