Cleanup and removed unused import

--- a/demo/styling.html
+++ b/demo/styling.html
@@ -44,7 +44,7 @@
         <template>
           <dom-bind>
             <template>
-              <exmg-markdown-editor markdown="{{markdown}}" split-view>
+              <exmg-markdown-editor split-view>
                 <marked-element markdown="{{markdown}}">
                   <div slot="markdown-html" class="markdown-body"></div>
                   <script type="text/markdown">
