--- a/exmg-markdown-editor.html
+++ b/exmg-markdown-editor.html
@@ -1,7 +1,6 @@
 <link rel="import" href="../polymer/polymer-element.html">
 <link rel="import" href="../iron-flex-layout/iron-flex-layout.html">
 <link rel="import" href="../iron-icon/iron-icon.html">
-<link rel="import" href="../marked-element/marked-element.html">
 <link rel="import" href="exmg-markdown-editor-icons.html">
 <link rel="import" href="exmg-markdown-editor-import.html">
 
@@ -44,6 +43,7 @@
         @apply --layout-horizontal;
       }
 
+      /* No importants! */
       :host([fullscreen]) .container {
         position: fixed !important;
         top: calc(50px + var(--exmg-markdown-editor-fullscreen-top-offset, 0px));
@@ -62,6 +62,7 @@
         padding: 0;
       }
 
+      /* No importants! */
       .CodeMirror {
         height: 100% !important;
         min-height: 300px;
@@ -453,6 +454,7 @@
           return;
         }
         const {undo, redo} = this.codeMirror.doc.historySize();
+
         const undoEl = this.shadowRoot.querySelector('.btn-undo');
         if (undoEl) {
           if (undo > 0) {
@@ -461,6 +463,7 @@
             undoEl.setAttribute('disabled', true);
           }
         }
+
         const redoEl = this.shadowRoot.querySelector('.btn-redo');
         if (redoEl) {
           if (redo > 0) {
@@ -484,16 +487,16 @@
       }
       _handleToolbarClick(e) {
         e.preventDefault();
-        this[e.model.button.action]();
+        this[e.model.button.action](); // Deconstruction for better reading?
       }
       setupEditor() {
         /* initialize key map */
         const keyMaps = {
           'Tab': (codeMirror) => {
-            var ranges = codeMirror.listSelections();
-            var pos = ranges[0].head;
-            var eolState = codeMirror.getStateAfter(pos.line);
-            var inList = eolState.list !== false;
+            const ranges = codeMirror.listSelections();
+            const pos = ranges[0].head;
+            const eolState = codeMirror.getStateAfter(pos.line);
+            const inList = eolState.list !== false;
 
             if (inList) {
               codeMirror.execCommand('indentMore');
@@ -508,10 +511,10 @@
             }
           },
           'Shift-Tab': (codeMirror) => {
-            var ranges = codeMirror.listSelections();
-            var pos = ranges[0].head;
-            var eolState = codeMirror.getStateAfter(pos.line);
-            var inList = eolState.list !== false;
+            const ranges = codeMirror.listSelections();
+            const pos = ranges[0].head;
+            const eolState = codeMirror.getStateAfter(pos.line);
+            const inList = eolState.list !== false;
 
             if (inList) {
               codeMirror.execCommand('indentLess');
@@ -521,7 +524,7 @@
             if (codeMirror.options.indentWithTabs) {
               codeMirror.execCommand('insertTab');
             } else {
-              var spaces = Array(codeMirror.options.tabSize + 1).join(' ');
+              const spaces = Array(codeMirror.options.tabSize + 1).join(' ');
               codeMirror.replaceSelection(spaces);
             }
           },
@@ -533,9 +536,9 @@
         };
 
         for (var key in this.shortcuts) {
-          const actionBtn = this._toolbarButtons.find((tb) => tb.name === key);
+          const actionBtn = this._toolbarButtons.find((tb) => tb.name === key); // keep var names fullnamed?
           if (this.shortcuts[key] !== null && actionBtn) {
-            keyMaps[convertShortcut(this.shortcuts[key])] = () => this[actionBtn.action]();
+            keyMaps[convertShortcut(this.shortcuts[key])] = () => this[actionBtn.action](); // _ or () ?
           }
         }
 
@@ -564,7 +567,7 @@
           this.dispatchEvent(new CustomEvent('value-change', {bubbles: true, composed: true, detail: {codeMirror, event}}));
         });
 
-        Polymer.RenderStatus.afterNextRender(this, _ => this._updateDocHistory());
+        Polymer.RenderStatus.afterNextRender(this, _ => this._updateDocHistory()); // _ or () ?
       }
       _replaceRangeLine(text, lineNumber) {
         this.codeMirror.replaceRange(text, {line: lineNumber, ch: 0}, {line: lineNumber, ch: 99999999999999});
