--- a/demo/init.html
+++ b/demo/init.html
@@ -6,14 +6,23 @@
 
     <title>exmg-markdown-editor demo</title>
 
-    <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
+    <script src="../node_modules/codemirror/lib/codemirror.js"></script>
+    <script src="../node_modules/codemirror/mode/markdown/markdown.js"></script>
+    <script src="../node_modules/codemirror/addon/edit/continuelist.js"></script>
+    <script src="../node_modules/codemirror/addon/mode/overlay.js"></script>
+    <script src="../node_modules/codemirror/addon/display/fullscreen.js"></script>
+    <script src="../node_modules/codemirror/addon/display/placeholder.js"></script>
+    <script src="../node_modules/codemirror/mode/gfm/gfm.js"></script>
+    <script src="../node_modules/codemirror/mode/xml/xml.js"></script>
 
-    <link rel="import" href="../../iron-demo-helpers/demo-pages-shared-styles.html">
-    <link rel="import" href="../../iron-demo-helpers/demo-snippet.html">
-    <link rel="import" href="../../marked-element/marked-element.html">
-    <link rel="import" href="../../polymer/lib/elements/dom-bind.html">
+    <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+
+    <script type="module" src="../node_modules/@polymer/iron-demo-helpers/demo-pages-shared-styles.js"></script>
+    <script type="module" src="../node_modules/@polymer/iron-demo-helpers/demo-snippet.js"></script>
+    <script type="module" src="../node_modules/@polymer/marked-element/marked-element.js"></script>
+    <script type="module" src="../node_modules/@polymer/polymer/lib/elements/dom-bind.js"></script>
     
-    <link rel="import" href="../exmg-markdown-editor.html">
+    <script type="module" src="../exmg-markdown-editor.js"></script>
 
     <custom-style>
       <style is="custom-style" include="demo-pages-shared-styles">
@@ -25,7 +34,6 @@
   </head>
   <body>
     <div class="vertical-section-container centered">
-
       <h2>Markdown inside script</h2>
       <demo-snippet>
         <template>
@@ -76,7 +84,6 @@
           </dom-bind>
         </template>
       </demo-snippet>
-
     </div>
   </body>
 </html>
