--- a/demo/style.html
+++ b/demo/style.html
@@ -6,15 +6,24 @@
 
     <title>exmg-markdown-editor demo</title>
 
-    <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
+    <script src="../node_modules/codemirror/lib/codemirror.js"></script>
+    <script src="../node_modules/codemirror/mode/markdown/markdown.js"></script>
+    <script src="../node_modules/codemirror/addon/edit/continuelist.js"></script>
+    <script src="../node_modules/codemirror/addon/mode/overlay.js"></script>
+    <script src="../node_modules/codemirror/addon/display/fullscreen.js"></script>
+    <script src="../node_modules/codemirror/addon/display/placeholder.js"></script>
+    <script src="../node_modules/codemirror/mode/gfm/gfm.js"></script>
+    <script src="../node_modules/codemirror/mode/xml/xml.js"></script>
 
-    <link rel="import" href="../../iron-demo-helpers/demo-pages-shared-styles.html">
-    <link rel="import" href="../../iron-demo-helpers/demo-snippet.html">
-    <link rel="import" href="../../marked-element/marked-element.html">
-    <link rel="import" href="../../polymer/lib/elements/dom-bind.html">
+    <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+
+    <script type="module" src="../node_modules/@polymer/iron-demo-helpers/demo-pages-shared-styles.js"></script>
+    <script type="module" src="../node_modules/@polymer/iron-demo-helpers/demo-snippet.js"></script>
+    <script type="module" src="../node_modules/@polymer/marked-element/marked-element.js"></script>
+    <script type="module" src="../node_modules/@polymer/polymer/lib/elements/dom-bind.js"></script>
     
-    <link rel="import" href="../exmg-markdown-editor.html">
-    <link rel="stylesheet" href="../../github-markdown-css/github-markdown.css">
+    <script type="module" src="../exmg-markdown-editor.js"></script>
+    <link rel="stylesheet" href="../node_modules/github-markdown-css/github-markdown.css">
 
     <custom-style>
       <style is="custom-style" include="demo-pages-shared-styles">
@@ -53,7 +62,7 @@
         <template>
           <dom-bind>
             <template>
-              <exmg-markdown-editor split-view fullscreen toolbar-buttons='["header", "strong", "italic", "strikethrough","|", "quote", "hr", "table", "code", "|", "unordered-list","ordered-list", "|","split-view"]'>
+              <exmg-markdown-editor split-view="" fullscreen="" toolbar-buttons="['header', 'strong', 'italic', 'strikethrough','|', 'quote', 'hr', 'table', 'code', '|', 'unordered-list','ordered-list', '|','split-view']">
                 <marked-element>
                   <div slot="markdown-html" class="markdown-body"></div>
                   <script type="text/markdown">
