--- a/test/exmg-markdown-editor.html
+++ b/test/exmg-markdown-editor.html
@@ -6,8 +6,8 @@
 
     <title>exmg-editor test</title>
 
-    <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
-    <script src="../../web-component-tester/browser.js"></script>
+    <script src="@webcomponents/webcomponentsjs/webcomponents-lite.js"></script>
+    <script src="web-component-tester/browser.js"></script>
 
     <link rel="import" href="../exmg-editor.html">
   </head>
