Fixed some issues + test

--- a/demo/style.html
+++ b/demo/style.html
@@ -62,7 +62,7 @@
         <template>
           <dom-bind>
             <template>
-              <exmg-markdown-editor split-view="" fullscreen="" toolbar-buttons="['header', 'strong', 'italic', 'strikethrough','|', 'quote', 'hr', 'table', 'code', '|', 'unordered-list','ordered-list', '|','split-view']">
+              <exmg-markdown-editor split-view="" fullscreen="" toolbar-buttons='["header", "strong", "italic", "strikethrough","|", "quote", "hr", "table", "code", "|", "unordered-list","ordered-list", "|","split-view"]'>
                 <marked-element>
                   <div slot="markdown-html" class="markdown-body"></div>
                   <script type="text/markdown">
