--- a/demo/toolbar.html
+++ b/demo/toolbar.html
@@ -39,7 +39,7 @@
         <template>
           <dom-bind>
             <template>
-              <exmg-markdown-editor auto-focus="" split-view="" toolbar-buttons="['undo','redo']">
+              <exmg-markdown-editor auto-focus="" split-view="" toolbar-buttons='["undo", "redo"]'>
                 <marked-element>
                   <div slot="markdown-html" class="markdown-body"></div>
                   <script type="text/markdown">
